pnmdec: completely reset parsing state at flush

Makes sure the mngr struct reflects a clean state
for the next frame, avoiding failures like:

https://bugzilla.gnome.org/show_bug.cgi?id=756563